--- a/styles.css
+++ b/styles.css
@@ -6,10 +6,11 @@
     --accent2: #f78b5d;
     margin: 0;
     padding: 0;
-    background: var(--main)
+    background: var(--main);
+    box-sizing: border-box;
 }
 
-* {
+body {
     margin: 0;
 }
 
@@ -68,23 +69,33 @@ nav button {
     width: 100%;
     height: 2.5rem;
     border-radius: 6% / 15px;
-    font-size: 2em;
+    font-size: 60px;
     border: 2px solid var(--accent1);
     color: var(--header);
-    background: var(--light)
+    background: var(--light);
+    position: relative;
 } 
 
-nav button p {
-    margin-top: -5px;
+.elipsis {
+    width: 40px;
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    gap: 5px;
+    position: relative;
 }
 
+.dot {
+    width: 10px;
+    height: 10px;
+    background: var(--header);
+    border-radius: 40%;
+    position: relative;
+}
 
 nav button:hover {
     cursor: pointer;
     background: var(--light);
-    position: relative;  
-    box-shadow: 6px 7px 40px -4px 
-            rgba(0, 0, 0, 0.2); 
 }
 
 .btn span { 
@@ -107,4 +118,22 @@ main {
     width: 100%;
     height: 100%;
     background: var(--main)
+}
+
+article {
+    width: auto;
+    flex-grow: 1;
+}
+
+.sidedeco {
+    height: 100%;
+    width: 7px;
+    background: var(--accent1);
+    border-radius: 40% / 5px;
+    margin: 15px 6px;
+    margin-bottom: 30px; 
+}
+
+.flex {
+    display: flex;
 }
