--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
     margin: 0;
     padding: 0;
     background: var(--main);
-    box-sizing: border-box;
+    /*box-sizing: border-box;*/
 }
 
 body {
@@ -20,8 +20,6 @@ body {
     color: var(--main);
     padding: 0;
     margin: 0 auto;
-    width: 100%;
-    height: 100%;
     width: 100vw;
     height: 100vh;
     overflow: hidden;
@@ -33,7 +31,7 @@ body {
 }
 
 .bar {
-    height: 130px;
+    height: 18vh;
     flex-grow: 1;
     background: var(--header);
 }
@@ -50,12 +48,12 @@ header p {
 }
 
 header h1 {
-    margin-bottom: 0px;
+    margin-bottom: 0;
     font-size: 2em;
 }
 
 header {
-    height: 130px;
+    height: 18vh;
 }
 
 nav {
@@ -111,29 +109,60 @@ nav button:hover {
     margin-left: -50px; 
   
     animation: ripple 1s forwards; 
-    opacity: 0; 
+    opacity: 0;
+    z-index: 2; 
 } 
 
 main {
     width: 100%;
-    height: 100%;
-    background: var(--main)
+    height: 82vh;
+    background: var(--main);
+    margin-bottom: 0;
 }
 
 article {
     width: auto;
     flex-grow: 1;
+    margin-bottom: 0;
+    height: 100%
 }
 
+
+
 .sidedeco {
-    height: 100%;
     width: 7px;
     background: var(--accent1);
     border-radius: 40% / 5px;
-    margin: 15px 6px;
-    margin-bottom: 30px; 
+    margin: 8px;
+    position: relative;
+    z-index: 3;
+    opacity: 100%;
+    height: 70%;
 }
 
 .flex {
     display: flex;
+}
+
+footer {
+    width: 100%;
+    height: fit-content;
+    background: var(--header);
+    border: 1px solid white;
+    padding: 0;
+}
+
+footer ul {
+    font-size: 15px;
+    color: var(--light);
+    height: 50%;
+    text-align: center;
+    display: flex;
+    gap: 6%;
+    margin: 0 10px;
+}
+
+li {
+    padding: 0;
+    margin: 0;
 }
