--- a/styles.css
+++ b/styles.css
@@ -7,11 +7,17 @@
     margin: 0;
     padding: 0;
     background: var(--main);
-    /*box-sizing: border-box;*/
+    box-sizing: border-box;
+}
+
+html, body {
+    height: 100%;
+    max-height: 100vh;
 }
 
 body {
     margin: 0;
+    height: 100%
 }
 
 
@@ -21,8 +27,8 @@ body {
     padding: 0;
     margin: 0 auto;
     width: 100vw;
-    height: 95vh;
-    overflow: hidden;
+    height: 100%;
+    overflow: visible;
     max-width: 600px;
 }
 
@@ -116,28 +122,26 @@ nav button:hover {
 } 
 
 main {
+    height: auto;
     width: 100%;
-    height: 100%;
     background: var(--main);
+    flex: 1;
+    overflow: hidden;
 }
 
 article {
     width: auto;
     flex-grow: 1;
-    height: 100%;
 }
-
-
 
 .sidedeco {
     width: 7px;
     background: var(--accent1);
     border-radius: 40% / 5px;
     margin: 8px;
-    position: relative;
     z-index: 3;
     opacity: 100%;
-    height: 100%;
+    height: 78.2vh;
 }
 
 .flex {
@@ -148,9 +152,11 @@ footer {
     width: calc(100% -1px);
     height: fit-content;
     background: var(--header);
-    border: 1px solid white;
     padding: .5em 0 ;
     max-height: 30px;
+    display: block;
+    position: relative;
+    bottom: 0;
 }
 
 footer ul {
